--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"changelog": {
 		"projecturl": "https://github.com/GHSVS-de/mod_toastghsvs",
 		"infosDE": "https://github.com/GHSVS-de/mod_toastghsvs#readme",
-		"infosEN": "",
+		"infosEN": "https://github.com/GHSVS-de/mod_toastghsvs#readme",
 		"docsDE": "",
 		"docsEN": "",
 		"lastTests": [
