--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"changelog": {
 		"projecturl": "https://github.com/GHSVS-de/mod_toastghsvs",
-		"infosDE": "https://github.com/GHSVS-de/mod_toastghsvs#readme",
+		"infosDE": "",
 		"infosEN": "https://github.com/GHSVS-de/mod_toastghsvs#readme",
 		"docsDE": "",
 		"docsEN": "",
